implement count endpoint

--- a/documentation.html
+++ b/documentation.html
@@ -62,6 +62,15 @@
           <span>Example: BASE_URL/categories</span>
         </li>
       </ul>
+
+      <h3>5.Get: /count/:category</h3>
+      <div>
+        <p>Return count of all items in category.</p>
+        <ul>
+          <li>
+            <span>Example: BASE_URL/count/phones</span>
+          </li>
+        </ul>
     </div>
   </body>
 </html>
