--- a/documentation.html
+++ b/documentation.html
@@ -23,8 +23,12 @@
             currentPage.
           </p>
           <span>Example: BASE_URL/phones?perPage=5&currentPage=2</span>
-
-          <p>*Response HEADERS has count of all phones</p>
+        </li>
+        <li>
+          <p>
+            - With sort: required url search params: sortBy. Availeble name of collection ['cheapest', 'expensive', 'newest']
+          </p>
+          <span>Example: BASE_URL/phones?sortBy=cheapest</span>
         </li>
       </ul>
     </div>
@@ -40,7 +44,18 @@
       </ul>
     </div>
 
-    <h3>3. Get: /downloads</h3>
+    <h3>3. Get: /phones/collection/:collectionName</h3>
+    <div>
+      <p>Return collection of 8 items in available categories.</p>
+      <ul>
+        <li>
+          <p>- Required params "collectionName", Availeble name of collection ['recommended', 'hotPrice', 'newest']</p>
+          <span>Example: BASE_URL/phones/collection/recommended</span>
+        </li>
+      </ul>
+    </div>
+
+    <h3>4. Get: /downloads</h3>
     <div>
       <p>Return image of item.</p>
       <ul>
@@ -54,7 +69,7 @@
       </ul>
     </div>
 
-    <h3>4.Get: /categories</h3>
+    <h3>5.Get: /categories</h3>
     <div>
       <p>Return all categories.</p>
       <ul>
@@ -63,7 +78,7 @@
         </li>
       </ul>
 
-      <h3>5.Get: /count/:category</h3>
+      <h3>6.Get: /count/:category</h3>
       <div>
         <p>Return count of all items in category.</p>
         <ul>
